src/styles/style.css
/* ... */
.play {
    font-size: 22px;
    color: #c0c0c0;
}

.play:hover {
    color: #3892c8;
}

.favorite {
    position: absolute;
    left: 11%;
    font-size: 20px;
    color: #c1c1c1;
	visibility: hidden;
}

.favorite:hover {
    color: #fa799a;
    cursor: default;
}

.song-title, .song-artists, .song-album, .song-duration, .song-more-button {
    position: absolute;
    width: 21%;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.song-title {
    margin-left: 15%;
}

.song-artists {
    display: flex;
    flex-direction: row;
    margin-left: 40%;
}

.song-album {
    margin-left: 64%;
}

.song-duration {
    margin-left: 88%;
}

.song-more-button {
    display: none;
    position: absolute;
    margin-top: -3px;
    margin-left: 89%;
    height: 20px;
    width: 13%;
    color: #B8B8B8;
    z-index: 1;
}

.song-title:hover, .song-artist:hover, .song-album:hover, .song-more-button:hover {
    color: #3892c8;
}

.song-menu {
    display: flex;
    position: absolute;
    top: 0px;
    right: 82px;
    height: 22vh;
    width: 33vh;
    background-color: #fefefe;
    border: 1px solid #bbb;
    box-shadow: 1px 2px 3px rgba(156, 156, 156, 0.2);
    color: #494949;
    z-index: 2;
}

@media screen and (max-width: 1000px) {
    .song-menu {
        right: 60px;
    }
}

.song-menu-top-arrow, .song-menu-bottom-arrow {
    display: block;
    position: absolute;
    top: 1.7rem;
    right: -6px;
    width: 10px;
    height: 10px;
    background-color: #fefefe;
    border-right: 1px solid #bbb;
    border-bottom: 1px solid #bbb;
    -webkit-transform: rotate(-135deg);
    transform: rotate(-45deg);
}

.song-menu-bottom-arrow {
    top: 41vh;
}

@media screen and (max-height: 720px) {
    .song-menu-bottom-arrow {
        top: 41.5vh;
    }
}

.song-menu-top {
    display: flex;
    flex-direction: row;
    height: 10vh;
    width: 100%;
}

.song-menu-picture, .song-menu-default-picture {
    display: none;
    height: 6.3vh;
    width: 6.3vh;
    margin: auto;
    margin-left: 4%;
    border-radius: 4%;
}

.song-menu-default-picture, .playing-song-default-picture, .default-album-cover {
    display: flex;
    width: 8.3vh;
    align-items: center;
    justify-content: center;
    background: #FFF;
    border: 1px solid #aec1f4;
}

.music-note {
    font-size: 22px;
    color: #256ed3;
    transform: scaleY(1.1);
}

.song-menu-details {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    width: 100%;
    margin-left: 4%;
    font-size: 13px;
    overflow: hidden;
}

.song-menu-title, .song-menu-artist {
    display: block;
    width: 93%;
    font-size: calc(10px + .0.48vh);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.song-menu-artist {
    font-size: calc(9px + .0.4vh);
    color: #737373;
}

.song-menu-separator {
    width: 92%;
    margin: auto;
    border-style: none;
    border-bottom: 1px solid rgb(226, 226, 226);
    margin-bottom: 3%;
}

.song-menu-option {
    display: flex;
    padding-left: 9%;
    padding-top: 3%;
    padding-bottom: 3%;
    font-size: 13px;
}

.song-menu-option-icon {
    padding-right: 4%;
    font-size: 19px;
    color: #9b9b9b;
    padding-top: 1px;
}

.song-menu-option:hover {
    background-color: #f4f4f4;
}

/*Albums Section*/

.albums-container {
    display: flex;
    flex-wrap: wrap;
    width: 90%;
    margin: auto;
    margin-top: 40px;
    margin-left: 65px;
}

.album {
    text-align: center;
    position: relative;
    height: calc(110px + 4.5vw);
    width: 110px;
    margin-right: 18px;
    margin-left: 18px;
    margin-bottom: 1.6vw;
}

.picture-wrap {
    position: relative;
    height: 15vh;
    width: 15vh;
    overflow: hidden;
}

.play-album {
    position: absolute;
    top: calc(50% - 15px);
    left: -20px;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    height: 20px;
    width: 20px;
    z-index: 4;
    visibility: hidden;
}

.play-album-icon {
    height: 100%;
    width: 100%;
    font-size: 28px;
    color: #FBFBFB;
}

.album-cover, .album-cover-fade, .default-album-cover {
    height: 100%;
    width: 100%;
    max-height: 100%;
    max-width: 100%;
    transition: transform 0.35s ease-out;
}

.album-cover {
    display: none;
}

.album-cover-fade {
    position: absolute;
    background: none;
    z-index: 1;
    opacity: 1;
    transition: opacity 0.7s;
}

.fade-hidden {
    opacity: 0;
    transition: opacity 0.7s;
}

.default-album-cover {
    height: 13vw;
    width: 13vw;
    box-sizing: border-box;
    background: #f2f9ff;
    border: 1px solid #afc9e3;
}

.album-icon {
    font-size: 43px;
    color: #86b9db;
}

.album-title {
    height: 2vw;
    width: 100%;
    font-size: 13px;
    color: #656565;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    margin: auto;
    margin-top: 5%;
}

.album-title:hover {
    color: #000000;
    cursor: default;
}

.control-panel {
    display: flex;
    align-items: center;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 5.65rem;
    min-height: 65px;
    background-color: #113881;
    visibility: hidden;
    z-index: 3;
}

.playing-song {
    display: flex;
    flex-direction: row;
    align-items: center;
    position: absolute;
    height: 100%;
    width: 26%;
    visibility: hidden;
    padding-left: 15px;
}

.playing-song-picture-container {
    height: 100%;
    width: 5.65rem;
	min-width: 90px;
    margin-left: -15px;
}

.playing-song-picture {
    display: none;
    height: 100%;
    width: 100%;
}

.playing-song-default-picture {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
    border: 1px solid #8f8f8f;
    border-left-style: none;
    background-color: #ececec;
}

.playing-song-default-picture .music-note {
    font-size: 27px;
}
/* ... */

